add parse rule
