# backend/docs/swagger.yaml
@@ -600,6 +600,19 @@ definitions:
       alertRuleFile:
         type: string
     type: object
+  request.AddLogParseRequest:
+    properties:
+      logTable:
+        $ref: '#/definitions/request.LogTable'
+      parseInfo:
+        type: string
+      parseName:
+        type: string
+      parseRule:
+        type: string
+      routeRule:
+        type: string
+    type: object
   request.Alert:
     properties:
       annotations:
@@ -647,6 +660,23 @@ definitions:
     - alert
     - group
     type: object
+  request.BufferEngineConfig:
+    properties:
+      maxBytes:
+        type: integer
+      maxRows:
+        type: integer
+      maxTime:
+        type: integer
+      minBytes:
+        type: integer
+      minRows:
+        type: integer
+      minTime:
+        type: integer
+      numLayers:
+        type: integer
+    type: object
   request.DataType:
     enum:
     - int64
@@ -681,6 +711,22 @@ definitions:
     required:
     - alert
     - group
+    type: object
+  request.DeleteLogParseRequest:
+    properties:
+      dataBase:
+        type: string
+      parseName:
+        type: string
+      tableName:
+        type: string
+    type: object
+  request.Field:
+    properties:
+      name:
+        type: string
+      type:
+        type: string
     type: object
   request.GetAlertManagerConfigReceverRequest:
     properties:
@@ -912,7 +958,37 @@ definitions:
     required:
     - endTime
     type: object
+  request.LogTable:
+    properties:
+      buffer:
+        $ref: '#/definitions/request.BufferEngineConfig'
+      fields:
+        items:
+          $ref: '#/definitions/request.Field'
+        type: array
+      ttl:
+        type: integer
+    type: object
   request.LogTableInfoRequest:
+    type: object
+  request.LogTableRequest:
+    properties:
+      buffer:
+        $ref: '#/definitions/request.BufferEngineConfig'
+      cluster:
+        type: string
+      dataBase:
+        type: string
+      fields:
+        items:
+          $ref: '#/definitions/request.Field'
+        type: array
+      replica:
+        type: boolean
+      tableName:
+        type: string
+      ttl:
+        type: integer
     type: object
   request.Operation:
     enum:
@@ -1712,6 +1788,15 @@ definitions:
           $ref: '#/definitions/response.Parse'
         type: array
     type: object
+  response.LogTableResponse:
+    properties:
+      error:
+        type: string
+      sqls:
+        items:
+          type: string
+        type: array
+    type: object
   response.Pagination:
     properties:
       current_page:
@@ -2437,6 +2522,58 @@ paths:
       summary: 查询全量日志日志
       tags:
       - API.log
+  /api/log/rule/add:
+    post:
+      consumes:
+      - application/json
+      description: 新增日志表解析规则
+      parameters:
+      - description: 请求信息
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/request.AddLogParseRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.LogParseResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/code.Failure'
+      summary: 新增日志表解析规则
+      tags:
+      - API.log
+  /api/log/rule/delete:
+    post:
+      consumes:
+      - application/json
+      description: 删除日志表解析规则
+      parameters:
+      - description: 请求信息
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/request.DeleteLogParseRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.LogParseResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/code.Failure'
+      summary: 删除日志表解析规则
+      tags:
+      - API.log
   /api/log/rule/get:
     post:
       consumes:
@@ -2513,6 +2650,32 @@ paths:
           schema:
             $ref: '#/definitions/code.Failure'
       summary: 获取日志表信息
+      tags:
+      - API.log
+  /api/log/update:
+    post:
+      consumes:
+      - application/json
+      description: 更新日志表
+      parameters:
+      - description: 请求信息
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/request.LogTableRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.LogTableResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/code.Failure'
+      summary: 更新日志表
       tags:
       - API.log
   /api/mock:
