# backend/pkg/api/log/func_logtable.go
@@ -57,6 +57,16 @@ func (h *handler) DropLogTable() core.HandlerFunc {
 	}
 }
 
+// UpdateLogTable 更新日志表
+// @Summary 更新日志表
+// @Description 更新日志表
+// @Tags API.log
+// @Accept json
+// @Produce json
+// @Param Request body request.LogTableRequest true "请求信息"
+// @Success 200 {object} response.LogTableResponse
+// @Failure 400 {object} code.Failure
+// @Router /api/log/update [post]
 func (h *handler) UpdateLogTable() core.HandlerFunc {
 	return func(c core.Context) {
 		req := new(request.LogTableRequest)
